<resources>
    <string name="app_name">ZMA</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="zip_fragment_label">Zip</string>
    <string name="create_fragment_label">Create</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="create">Create</string>
    <string name="create_fab_description">A button to create a new folder in the zip file</string>
    <string name="barcode_input_hint">Enter Barcode ID here</string>
    <string name="barcode_instructions_label">Select one of the options to add a barcode ID</string>
    <string name="capture">Capture</string>
    <string name="fragment_container">fragment_container</string>
    <string name="barcode_fragment_label">Scanner</string>
    <string name="confirmation_fragment_label">Confirmation</string>
    <string name="camera_fragment_label">Camera</string>
    <string name="wrong">Wrong</string>
    <string name="confirm">Confirm</string>
    <string name="add_picture">Add Picture</string>
    <string name="done">Done</string>
    <string name="add_more">Add New</string>
    <string name="create_zip">Create Zip</string>
    <string name="send_to_server">Send to Server</string>
    <string name="save_to_phone">Save to Phone</string>
    <string name="save_instructions">Select an option below for were to save the zip file</string>
    <string name="delete_container">Delete Container</string>
    <string name="rename_container">Rename Container</string>
    <string name="save">Save</string>
</resources>