<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateFragment">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_instructions_label"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/scannerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_light"
        android:textColorLink="@android:color/holo_blue_light"
        android:clickable="true"
        android:focusable="true"

        app:layout_constraintTop_toBottomOf="@id/instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/instructions"
        />

    <TextView
        android:id="@+id/inputLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_light"
        android:textColorLink="@android:color/holo_blue_light"
        android:clickable="true"
        android:focusable="true"

        app:layout_constraintTop_toBottomOf="@id/instructions"
        app:layout_constraintStart_toStartOf="@id/instructions"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <LinearLayout
        android:id="@+id/barcodeValueLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@id/instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/barcodeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </LinearLayout>

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_picture"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@id/imageRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="gone"
        android:padding="8dp"

        app:layout_constraintTop_toTopOf="@id/barcodeValueLayout"
        />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/containerOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/deleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/delete_container"
        />

        <Button
            android:id="@+id/doneButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/done"
        />

        <Button
            android:id="@+id/changeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rename_container"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/inputLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:visibility="gone"
    >
        <EditText
            android:id="@+id/barcodeIdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/barcode_input_hint"
            android:autofillHints="@string/barcode_input_hint"
            android:inputType="text"
        />

        <ImageButton
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:contentDescription="@string/confirm"
            android:background="?android:attr/selectableItemBackground"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>